--- a/src/style.css
+++ b/src/style.css
@@ -13,16 +13,21 @@ div {
   padding: 0;
 }
 
-html {
-  background-color: rgb(243, 243, 243);
+body {
+  background-color: rgb(249 249 249);
   font-family: "Inter", sans-serif;
   font-size: 16px;
   color: #333;
+  line-height: 1.4;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+img {
+  max-width: 100%;
 }
 
 .container {
@@ -75,5 +80,9 @@ h1 {
   }
   html {
     font-size: 8px;
+  }
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 20px;
   }
 }
